<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wifiLocator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <Button
        android:id="@+id/openWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/startWifi" />

    <Button
        android:id="@+id/closeWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stopScan"
        android:layout_alignParentRight="true"
        android:text="@string/closeWifi" />

    <Button
        android:id="@+id/scanWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openWifi"
        android:text="@string/scanWifi" />

    <Button
        android:id="@+id/stopScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scanWifi"
        android:layout_alignBottom="@+id/scanWifi"
        android:layout_alignParentRight="true"
        android:text="@string/stopScan" />

    <ProgressBar
        android:id="@+id/scanning"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stopScan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/wifiList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scanWifi"
        android:layout_marginTop="102dp"
        android:maxEms="20"
        android:maxLines="18"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/roomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scanWifi"
        android:layout_marginTop="30dp"
        android:text="@string/roomLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/roomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/roomLabel"
        android:layout_alignBottom="@+id/roomLabel"
        android:layout_toRightOf="@+id/roomLabel"
        android:ems="10"
        android:inputType="text|number" >

        <requestFocus />
    </EditText>

</RelativeLayout>
